fix title on mobile

--- a/formatted.css
+++ b/formatted.css
@@ -84,12 +84,21 @@ body.darkmode {
     }
 
     #header-container2 {
-        height:275px;
+        height:-webkit-fit-content;
+        height:-moz-fit-content;
+        height:fit-content;
     }
 
     /* .title-break{
         flex-basis:100%;
     } */
+}
+
+
+@media only screen and (max-width:540px){
+    #header-title-container h1 {
+        font-size: 15vw !important;
+    }
 }
 
 #header.darkmode {
